# df-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  mcp_config_with_env.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
app/: main.py
app/api/: routes.py
app/core/: config.py  singleton.py
app/db/: session.py
app/fixtures/: __init__.py  documents.json  loader.py
app/models/: document.py  question_answer.py
app/schemas/: answer_question.py  document.py  extract_structured.py  fhir_conversion.py  summarization.py
app/services/: answer_question_cache_service.py  answer_question_service.py  document.py  extract_structured_service.py  fhir_conversion_service.py  summarization_service.py
data/: app.db  test.db
tests/: conftest.py  test_answer_question_service.py  test_api.py  test_extract_structured_service.py  test_fhir_conversion_service.py  test_summarization_service.py
